discussion/kv_engine/153247/153247_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

updates for fmt 7.1.x

Change-Id: I790ccdaed5f5cdb40b89f54e76051861503dfb91

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2021-05-10 11:28:49.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-10 11:38:17.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8896/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& error_category() NOEXCEPT;
                                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:282:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:286:33: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
        : system_error(int(ev), error_category(), what_arg) {
                                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:291:41: error: use of undeclared identifier "error_category"; did you mean "std::error_category"? [clang-diagnostic-error]
    return std::error_condition(int(e), error_category());
                                        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/system_error:89:9: note: "std::error_category" declared here
  class error_category
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:139:52: error: expected function body after function declarator [clang-diagnostic-error]
const std::error_category& engine_error_category() NOEXCEPT;
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:144:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:147:33: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
        : system_error(int(ev), engine_error_category(), what_arg) {}
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_error.h:151:41: error: use of undeclared identifier "engine_error_category" [clang-diagnostic-error]
    return std::error_condition(int(e), engine_error_category());
                                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8896/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8896/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35729/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\include\mcbp/protocol/status.h(277): error C3646: "NOEXCEPT": unknown override specifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35729/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30556/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30556/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10448/ : FAILURE

Compile error at [2021-05-10T11:37:14.686Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10448/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9516/ : FAILURE

Compile error at [2021-05-10T11:30:51.705Z] ../kv_engine/include/mcbp/protocol/status.h:277:45:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9516/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10588/ : FAILURE

Compile error at [2021-05-10T11:31:54.510Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected initializer before ?NOEXCEPT?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10588/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10840/ : FAILURE

Compile error at [2021-05-10T11:30:38.455Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10840/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18399/ : FAILURE

Compile error at [2021-05-10T11:30:19.642Z] ../kv_engine/include/memcached/engine_error.h:139:52:
error: expected function body after function declarator
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7448/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
